<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_title"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/dimen_common">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/area"
        android:textColor="@color/text_default" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/current_confirmed_count"
        android:textColor="@color/text_default" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_common"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/confirmed_count"
        android:textColor="@color/text_default" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_common"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cured_count"
        android:textColor="@color/text_default" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_common"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dead_count"
        android:textColor="@color/text_default" />
</LinearLayout>