<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_light"
        app:cardCornerRadius="@dimen/dimen_common"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/dimen_common">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_area_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_default"
                android:text="@string/area"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_marginTop="@dimen/dimen_light"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@id/tv_area_static" />

            <TextView
                android:id="@+id/tv_global_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_default"
                android:layout_marginTop="@dimen/dimen_common"
                android:text="@string/global"
                app:layout_constraintLeft_toLeftOf="@id/tv_area_static"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tv_domestic_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_default"
                android:layout_marginTop="@dimen/dimen_common"
                android:text="@string/domestic"
                app:layout_constraintLeft_toLeftOf="@id/tv_area_static"
                app:layout_constraintTop_toBottomOf="@id/tv_global_static" />

            <TextView
                android:id="@+id/tv_confirmed_count_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_confirmed_count"
                android:textColor="@color/text_default"
                android:layout_marginStart="@dimen/dimen_common"
                app:layout_constraintLeft_toRightOf="@id/tv_area_static"
                app:layout_constraintRight_toLeftOf="@id/tv_current_confirmed_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_area_static" />

            <TextView
                android:id="@+id/tv_current_confirmed_count_static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_default"
                android:text="@string/confirmed_count"
                app:layout_constraintLeft_toRightOf="@id/tv_confirmed_count_static"
                app:layout_constraintRight_toLeftOf="@id/tv_cured_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_confirmed_count_static" />

            <TextView
                android:id="@+id/tv_cured_count_static"
                android:textColor="@color/text_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cured_count"
                app:layout_constraintLeft_toRightOf="@id/tv_current_confirmed_count_static"
                app:layout_constraintRight_toLeftOf="@id/tv_dead_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_confirmed_count_static" />

            <TextView
                android:id="@+id/tv_dead_count_static"
                android:layout_width="wrap_content"
                android:textColor="@color/text_default"
                android:layout_height="wrap_content"
                android:text="@string/dead_count"
                app:layout_constraintLeft_toRightOf="@id/tv_cured_count_static"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_confirmed_count_static" />

            <TextView
                android:id="@+id/tv_global_current_confirmed_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:textColor="@color/text_default"
                app:layout_constraintBottom_toBottomOf="@id/tv_global_static"
                app:layout_constraintLeft_toLeftOf="@id/tv_confirmed_count_static"
                app:layout_constraintRight_toRightOf="@id/tv_confirmed_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_global_static" />

            <TextView
                android:id="@+id/tv_global_confirmed_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="235"
                android:textColor="@color/text_default"
                app:layout_constraintBottom_toBottomOf="@id/tv_global_static"
                app:layout_constraintLeft_toLeftOf="@id/tv_current_confirmed_count_static"

                app:layout_constraintRight_toRightOf="@id/tv_current_confirmed_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_global_static" />

            <TextView
                android:id="@+id/tv_global_cured_count"
                android:layout_width="wrap_content"
                android:textColor="@color/text_default"
                android:layout_height="wrap_content"
                tools:text="34"
                app:layout_constraintBottom_toBottomOf="@id/tv_global_static"
                app:layout_constraintLeft_toLeftOf="@id/tv_cured_count_static"
                app:layout_constraintRight_toRightOf="@id/tv_cured_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_global_static" />

            <TextView
                android:id="@+id/tv_global_dead_count"
                android:layout_width="wrap_content"
                android:textColor="@color/text_default"
                android:layout_height="wrap_content"
                tools:text="56"
                app:layout_constraintBottom_toBottomOf="@id/tv_global_static"
                app:layout_constraintLeft_toLeftOf="@id/tv_dead_count_static"
                app:layout_constraintRight_toRightOf="@id/tv_dead_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_global_static" />

            <TextView
                android:id="@+id/tv_domestic_current_confirmed_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:textColor="@color/text_default"
                app:layout_constraintLeft_toLeftOf="@id/tv_confirmed_count_static"
                app:layout_constraintRight_toRightOf="@id/tv_confirmed_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_domestic_static"
                app:layout_constraintBottom_toBottomOf="@id/tv_domestic_static"/>

            <TextView
                android:id="@+id/tv_domestic_confirmed_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="235"
                android:textColor="@color/text_default"
                app:layout_constraintLeft_toLeftOf="@id/tv_current_confirmed_count_static"
                app:layout_constraintRight_toRightOf="@id/tv_current_confirmed_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_domestic_static"
                app:layout_constraintBottom_toBottomOf="@id/tv_domestic_static"/>

            <TextView
                android:id="@+id/tv_domestic_cured_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="34"
                android:textColor="@color/text_default"
                app:layout_constraintLeft_toLeftOf="@id/tv_cured_count_static"
                app:layout_constraintRight_toRightOf="@id/tv_cured_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_domestic_static"
                app:layout_constraintBottom_toBottomOf="@id/tv_domestic_static"/>

            <TextView
                android:id="@+id/tv_domestic_dead_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="56"
                android:textColor="@color/text_default"
                app:layout_constraintLeft_toLeftOf="@id/tv_dead_count_static"
                app:layout_constraintRight_toRightOf="@id/tv_dead_count_static"
                app:layout_constraintTop_toTopOf="@id/tv_domestic_static"
                app:layout_constraintBottom_toBottomOf="@id/tv_domestic_static"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>