<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_light"
        app:cardCornerRadius="@dimen/dimen_common"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_province_subscribe_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/background_subscribe"
                android:padding="@dimen/dimen_common"
                app:layout_constraintBottom_toBottomOf="@id/tv_subscribe"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/line"
                app:layout_constraintTop_toTopOf="@id/tv_subscribe" />

            <View
                android:id="@+id/line"
                android:layout_width="1dip"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/line"
                app:layout_constraintBottom_toBottomOf="@id/rv_province_subscribe_list"
                app:layout_constraintLeft_toRightOf="@id/rv_province_subscribe_list"
                app:layout_constraintRight_toLeftOf="@id/tv_subscribe"
                app:layout_constraintTop_toTopOf="@id/rv_province_subscribe_list" />


            <TextView
                android:id="@+id/tv_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_subscribe"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="@dimen/dimen_wide"
                android:text="@string/add_subscribe"
                android:textColor="@color/text_default"
                app:layout_constraintLeft_toRightOf="@id/line"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.donkingliang.labels.LabelsView
                android:id="@+id/labels_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_common"
                android:paddingTop="@dimen/dimen_common"
                app:labelBackground="@drawable/selector_label_background"
                app:labelTextColor="@drawable/selector_label_text_color"
                app:labelTextPaddingBottom="@dimen/dimen_light"
                app:labelTextPaddingLeft="@dimen/dimen_common"
                app:labelTextPaddingRight="@dimen/dimen_common"
                app:labelTextPaddingTop="@dimen/dimen_light"
                app:labelTextSize="@dimen/text_label"
                app:layout_constraintTop_toBottomOf="@id/tv_subscribe"
                app:lineMargin="@dimen/dimen_common"
                app:maxColumns="0"
                app:maxLines="0"
                app:selectType="SINGLE"
                app:wordMargin="@dimen/dimen_common" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_statistic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_light"
                app:cardBackgroundColor="@color/background_title"
                app:cardCornerRadius="@dimen/dimen_wide"
                app:cardElevation="0dp"
                app:contentPadding="@dimen/dimen_common"
                app:layout_constraintTop_toBottomOf="@id/labels_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_current_confirmed_count_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_confirmed_count"
                        android:textColor="@color/text_default"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/tv_confirmed_count_static"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_confirmed_count_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed_count"
                        android:textColor="@color/text_default"
                        app:layout_constraintLeft_toRightOf="@id/tv_current_confirmed_count_static"
                        app:layout_constraintRight_toLeftOf="@id/tv_high_risk_area_count_static"
                        app:layout_constraintTop_toTopOf="@id/tv_current_confirmed_count_static" />

                    <TextView
                        android:id="@+id/tv_high_risk_area_count_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_risk_area"
                        android:textColor="@color/text_default"
                        app:layout_constraintLeft_toRightOf="@id/tv_confirmed_count_static"
                        app:layout_constraintRight_toLeftOf="@id/tv_middle_risk_area_count_static"
                        app:layout_constraintTop_toTopOf="@id/tv_current_confirmed_count_static" />

                    <TextView
                        android:id="@+id/tv_middle_risk_area_count_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/middle_risk_area"
                        android:textColor="@color/text_default"
                        app:layout_constraintLeft_toRightOf="@id/tv_high_risk_area_count_static"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_current_confirmed_count_static" />

                    <TextView
                        android:id="@+id/tv_current_confirmed_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_default"
                        app:layout_constraintLeft_toLeftOf="@id/tv_current_confirmed_count_static"
                        app:layout_constraintRight_toRightOf="@id/tv_current_confirmed_count_static"
                        app:layout_constraintTop_toBottomOf="@id/tv_current_confirmed_count_static" />

                    <TextView
                        android:id="@+id/tv_confirmed_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_default"
                        app:layout_constraintLeft_toLeftOf="@id/tv_confirmed_count_static"
                        app:layout_constraintRight_toRightOf="@id/tv_confirmed_count_static"
                        app:layout_constraintTop_toTopOf="@id/tv_current_confirmed_count" />

                    <TextView
                        android:id="@+id/tv_high_risk_area_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_default"
                        app:layout_constraintLeft_toLeftOf="@id/tv_high_risk_area_count_static"
                        app:layout_constraintRight_toRightOf="@id/tv_high_risk_area_count_static"
                        app:layout_constraintTop_toTopOf="@id/tv_current_confirmed_count" />

                    <TextView
                        android:id="@+id/tv_middle_risk_area_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_default"
                        app:layout_constraintLeft_toLeftOf="@id/tv_middle_risk_area_count_static"
                        app:layout_constraintRight_toRightOf="@id/tv_middle_risk_area_count_static"
                        app:layout_constraintTop_toTopOf="@id/tv_current_confirmed_count" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_high_risk_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_common"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/cv_statistic">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/high_risk_area" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_high_risk_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_middle_risk_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_common"
                android:paddingBottom="@dimen/padding_common"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/ll_high_risk_area">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/middle_risk_area" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_middle_risk_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>